minor improvements everywhere

--- a/note/tutorial/quickstart.ipynb
+++ b/note/tutorial/quickstart.ipynb
@@ -410,7 +410,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IrisFlow as a Flow-Subclass\n",
+    "# Your Flow as a Flow-Subclass\n",
     "\n",
     "This, we could consider the right way to do things in `affe`\n",
     "\n",
@@ -424,7 +424,7 @@
     "tags": []
    },
    "source": [
-    "### Implementation"
+    "## Implementation in Notebook"
    ]
   },
   {
@@ -433,7 +433,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from affe import Flow"
+    "from affe import Flow\n",
+    "from time import sleep"
    ]
   },
   {
@@ -443,12 +444,12 @@
    "outputs": [],
    "source": [
     "class IrisFlow(Flow):\n",
-    "    def __init__(self, max_depth=None, **kwargs):\n",
+    "    def __init__(self, max_depth=None, sleep_seconds=0, **kwargs):\n",
     "        \"\"\"\n",
     "        All the information you want to pass inside the flow function,\n",
     "        you can embed in the config dictionary.\n",
     "        \"\"\"\n",
-    "        self.config = dict(max_depth=max_depth)\n",
+    "        self.config = dict(max_depth=max_depth, sleep_seconds=sleep_seconds)\n",
     "        super().__init__(config=self.config, **kwargs)\n",
     "        return\n",
     "\n",
@@ -462,6 +463,7 @@
     "        from sklearn.tree import DecisionTreeClassifier\n",
     "        from sklearn.model_selection import train_test_split\n",
     "        from sklearn.metrics import accuracy_score\n",
+    "        from time import sleep\n",
     "\n",
     "        return\n",
     "\n",
@@ -485,8 +487,12 @@
     "        \"\"\"\n",
     "        # Obtain configuration\n",
     "        max_depth = config.get(\"max_depth\", None)\n",
+    "        sleep_seconds = config.get(\"sleep_seconds\", 0)\n",
     "\n",
     "        print(\"I am about to execute the IRIS FLOW\")\n",
+    "        print(\"BUT FIRST: I shall sleep {} seconds\".format(sleep_seconds))\n",
+    "        sleep(sleep_seconds)\n",
+    "        print(\"I WOKE UP, gonna do my stuff now.\")\n",
     "\n",
     "        # Load data\n",
     "        X, y = datasets.load_iris(return_X_y=True)\n",
@@ -503,7 +509,10 @@
     "\n",
     "        score = accuracy_score(y_test, y_pred, normalize=True)\n",
     "\n",
-    "        print(\"I am about DONE executing the IRIS FLOW\")\n",
+    "        msg = \"\"\"\n",
+    "        I am DONE executing the IRIS FLOW\n",
+    "        \"\"\"\n",
+    "        print(msg)\n",
     "        return score"
    ]
   },
@@ -526,7 +535,11 @@
      "output_type": "stream",
      "text": [
       "I am about to execute the IRIS FLOW\n",
-      "I am about DONE executing the IRIS FLOW\n"
+      "BUT FIRST: I shall sleep 0 seconds\n",
+      "I WOKE UP, gonna do my stuff now.\n",
+      "\n",
+      "        I am DONE executing the IRIS FLOW\n",
+      "        \n"
      ]
     },
     {
@@ -555,7 +568,11 @@
      "output_type": "stream",
      "text": [
       "I am about to execute the IRIS FLOW\n",
-      "I am about DONE executing the IRIS FLOW\n"
+      "BUT FIRST: I shall sleep 0 seconds\n",
+      "I WOKE UP, gonna do my stuff now.\n",
+      "\n",
+      "        I am DONE executing the IRIS FLOW\n",
+      "        \n"
      ]
     },
     {
@@ -578,20 +595,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alright, that looks pretty nice already. Now the question is: what does this get me for free? \n",
+    "## Implementation in Codebase\n",
+    "\n",
+    "Alright, that looked pretty nice already. Now the question is: _what is in it for me?_\n",
     "    \n",
     "Well you get:\n",
     "- logging\n",
     "- timeouts\n",
-    "- fancy executioners\n",
     "- boilerplate filesystem managment\n",
+    "- fancy executioners\n",
+    "- and so much more!\n",
+    "\n",
     "    \n",
-    "So let's dive into that."
+    "So let's dive into that.\n",
+    "\n",
+    "However, the `IrisFlow` object does not exist outside of our Jupyter notebook, and that is unfortunately not OK for `affe` when running something in a subprocess/another shell, which is what you need to get these fancy functionalities.\n",
+    "\n",
+    "But, allow us to resume via a demonstration flow, which learns a decision tree on the iris dataset (yes, exactly what we were doing with our IrisFlow already). You can check the source code to verify that this does exactly the same thing as the IrisFlow above, with then the added feature that `IrisDemo` actually exists in your python path etc."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Import\n",
+    "\n",
+    "Let us import the `IrisDemo` object, and demonstrate that it behaves exactly similar."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am about to execute the IRIS FLOW\n",
+      "BUT FIRST: I shall sleep 0 seconds\n",
+      "I WOKE UP, gonna do my stuff now.\n",
+      "\n",
+      "        I am DONE executing the IRIS FLOW\n",
+      "        \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from affe.demo import IrisDemo\n",
+    "\n",
+    "demoflow = IrisDemo(max_depth=3, log_filepath=\"logs/irisdemo\")\n",
+    "demoflow.run()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Logging\n",
     "\n",
@@ -605,94 +676,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'via-subprocess'"
+       "'logs/irisdemo'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# let us try:\n",
-    "iris_flow = IrisFlow(max_depth=10, log_filepath=\"via-subprocess\")\n",
-    "iris_flow.run_with_log_via_shell()"
+    "demoflow = IrisDemo(max_depth=3, log_filepath=\"logs/irisdemo\")\n",
+    "demoflow.run_with_log_via_shell()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### Timeouts\n",
+    "\n",
+    "To see how the timeouts work, we can use the \"sleep\" functionality to enforce our iris flow to take a bit longer. \n",
+    "\n",
+    "If force the workflow (due to sleeping) to take longer than the timeout, execution will abort."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am about to execute the IRIS FLOW\n",
+      "BUT FIRST: I shall sleep 5 seconds\n",
+      "I WOKE UP, gonna do my stuff now.\n",
+      "\n",
+      "        I am DONE executing the IRIS FLOW\n",
+      "        \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# this will just work, because the run() method has no notion of timeout\n",
+    "\n",
+    "iris_flow = IrisDemo(\n",
+    "    max_depth=10, sleep_seconds=5, log_filepath=\"logs/via-subprocess\", timeout_s=3\n",
+    ")\n",
+    "iris_flow.run()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately, when being executed directly from Jupyter notebook it still fails, because the subprocess does not recognize the IrisFlow object! It has no idea how to unpickle it.\n",
-    "\n",
-    "However, if you define your flow, and this object is accesible to for instance, your conda environment that you run your experiments in, you will be fine."
+    "So in this case, nothing really happens. Things change, however, when executing through shell."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from affe.demo import DTDemo"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'fit_time_s': 0.0013339519500732422,\n",
-       " 'predict_time_s': 0.00022482872009277344,\n",
-       " 'score': 1.0}"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = DTDemo()\n",
-    "\n",
-    "f.run()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/zissou/repos/affe/note/out/GenericBenchmark/logs/logs-0000'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f.run_via_shell_with_log_autonomous()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -702,7 +760,7 @@
     {
      "data": {
       "text/plain": [
-       "'via-shell'"
+       "'logs/timeout-sufficient'"
       ]
      },
      "execution_count": 24,
@@ -711,51 +769,61 @@
     }
    ],
    "source": [
-    "# this one works\n",
-    "iris_flow = IrisFlow(max_depth=10, log_filepath=\"via-shell\")\n",
-    "iris_flow.run_with_log_via_shell_autonomous()"
+    "# timeout is higher than the actual execution time\n",
+    "\n",
+    "iris_flow = IrisDemo(\n",
+    "    max_depth=10, sleep_seconds=2, log_filepath=\"logs/timeout-sufficient\", timeout_s=10\n",
+    ")\n",
+    "iris_flow.run_with_log_via_shell()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"/opt/miniconda3/envs/affe/bin/python /Users/zissou/repos/affe/src/affe/cli/flow_cli_with_monitors.py -f 'flowfile.pkl' -l 'via-shell' -t 60\""
+       "'logs/timeout-insufficient'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "iris_flow.get_shell_with_log_command()"
+    "# timeout lower than execution time\n",
+    "\n",
+    "iris_flow = IrisDemo(\n",
+    "    max_depth=10,\n",
+    "    sleep_seconds=15,\n",
+    "    log_filepath=\"logs/timeout-insufficient\",\n",
+    "    timeout_s=10,\n",
+    ")\n",
+    "iris_flow.run_with_log_via_shell()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "You can check those logfiles yourself, and see what happens. The second logfile will tell you that it aborted due to hitting its timelimit, as it should."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Filesystem Management\n",
+    "\n",
+    "This is not _by default_ in a Flow object, in order to keep things clean. However, you can quickly and easily define a base folder in which affe is supposed to drop all its outputs.\n",
+    "\n",
+    "To demonstrate, we will here define the `out`directory in the current directory as the destination for all of its outputs.\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
